--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,9 +35,7 @@ stages:
     - script: |
         python -m venv breinde
         source breinde/bin/activate
-        python -m pip install --upgrade pip
-        pip install setup
-        pip install -r requirements.txt
+        make install
       workingDirectory: $(projectRoot)
       displayName: "Install requirements"
     - task: ArchiveFiles@2
